Fix annoying bell when attaching tmux in PuTTY.

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,9 @@ bind l select-pane -R
 # Start numbering at 1
 set -g base-index 1
 
+# Fix annoying bell in PuTTY
+set -ga terminal-overrides ",xterm*:Cr="
+
 # wemux theme
 # https://gist.github.com/3712874
 set -g status-left-length 32
