Add settings for KiTTY.  Keep keys and sessions secret.

--- a/.hgignore
+++ b/.hgignore
@@ -4,9 +4,12 @@ syntax: glob
 *.rej
 *.swp
 *~
+*.exe
 
 Package Control.last-run
 
 syntax: regexp
 ^vim/bundle/(?!vundle)
 ^pentadactyl/info
+(?i)SshHostKeys
+^KiTTY/Sessions
