Advertise that tmux can display 256 color

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,9 @@ set -g base-index 1
 # Fix annoying bell in PuTTY
 set -ga terminal-overrides ",xterm*:Cr="
 
+# Advertise that we can display 256 color
+set -g default-terminal "screen-256color"
+
 # wemux theme
 # https://gist.github.com/3712874
 set -g status-left-length 32
