--- a/tmux.conf
+++ b/tmux.conf
@@ -14,8 +14,8 @@ set -ga terminal-overrides ",xterm*:Cr="
 # Advertise that we can display 256 color
 set -g default-terminal "screen-256color"
 
-# wemux theme
-# https://gist.github.com/3712874
+# My version of the wemux theme
+# https://github.com/zolrath/wemux/wiki/Status-Line
 set -g status-left-length 32
 set -g status-right-length 150
 
@@ -28,7 +28,7 @@ set -g message-fg colour16
 set -g message-bg colour221
 set -g message-attr bold
 
-set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]⮀'
+set -g status-left '#[fg=colour235,bg=colour252,bold] ⌂ #S #[fg=colour245,bg=colour238,bold] #(whoami) '
 set -g window-status-format "#[fg=white,bg=colour234] #I #W "
-set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=colour25,bg=colour39,noreverse,bold] #I ⮁ #W #[fg=colour39,bg=colour234,nobold]⮀"
+set -g window-status-current-format "#[fg=colour25,bg=colour39,noreverse,bold] #I » #W "
 set -g status-right "#(wemux status_users)"
