Various improvements to my tmux.conf.

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,21 +14,80 @@ set -ga terminal-overrides ",xterm*:Cr="
 # Advertise that we can display 256 color
 set -g default-terminal "screen-256color"
 
-# My version of the wemux theme
-# https://github.com/zolrath/wemux/wiki/Status-Line
-set -g status-left-length 32
-set -g status-right-length 150
+# Enable Unicode
+setw -g utf8
+set -g status-utf8 on
 
-set -g status-fg white
-set -g status-bg colour234
-set -g window-status-activity-attr bold
-set -g pane-border-fg colour245
-set -g pane-active-border-fg colour39
-set -g message-fg colour16
-set -g message-bg colour221
-set -g message-attr bold
+# Shortcut to reload configuration
+unbind r
+bind r source-file ~/.tmux.conf
 
-set -g status-left '#[fg=colour235,bg=colour252,bold] ⌂ #S #[fg=colour245,bg=colour238,bold] #(whoami) '
-set -g window-status-format "#[fg=white,bg=colour234] #I #W "
-set -g window-status-current-format "#[fg=colour25,bg=colour39,noreverse,bold] #I » #W "
-set -g status-right "#(wemux status_users)"
+# Configuration beyond this point is inspired/borrowed from this article:
+# My Tmux Setup (http://www.unwiredcouch.com/2013/11/15/my-tmux-setup.html)
+
+# status bar settings
+set -g status-bg black
+set -g status-fg green
+set -g status-left '#h:[#S]'
+set -g status-left-length 50
+set -g status-right-length 50
+set -g status-right "%H:%M %d-%h-%Y"
+setw -g window-status-current-format "|#I:#W|"
+setw -g window-status-current-fg colour166
+setw -g window-status-current-bg black
+set-window-option -g automatic-rename off
+
+# border coloring for panes
+set-option -g pane-active-border-fg colour166
+
+# listen to alerts from all windows
+set -g bell-action any
+setw -g window-status-bell-bg white
+setw -g window-status-bell-fg red
+
+# bind fast session switching
+unbind S
+bind S command-prompt "switch -t %1"
+
+# mouse related config
+set -g mouse-select-pane off
+set -g mode-mouse off
+
+# bind resize commands to keys
+bind = resize-pane -D 5
+bind + resize-pane -U 5
+bind < resize-pane -L 5
+bind > resize-pane -R 5
+
+# Color Scheme is from https://github.com/seebi/tmux-colors-solarized
+#### COLOUR (Solarized dark)
+
+# default statusbar colors
+set-option -g status-bg black #base02
+set-option -g status-fg yellow #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg brightblue #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg brightred #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg black #base02
+set-option -g pane-active-border-fg brightgreen #base01
+
+# message text
+set-option -g message-bg black #base02
+set-option -g message-fg brightred #orange
+
+# pane number display
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
+
+# clock
+set-window-option -g clock-mode-colour green #green
