Fix unicode setting for tmux.

--- a/tmux.conf
+++ b/tmux.conf
@@ -15,7 +15,7 @@ set -ga terminal-overrides ",xterm*:Cr="
 set -g default-terminal "screen-256color"
 
 # Enable Unicode
-setw -g utf8
+setw -g utf8 on
 set -g status-utf8 on
 
 # Shortcut to reload configuration
