--- a/i3config/i3/config
+++ b/i3config/i3/config
@@ -149,3 +149,7 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
 }
+
+# AUTOSTART
+exec ~/.dropbox-dist/dropboxd
+exec --no-startup-id gnome-sound-applet
