Add coffee-script vim plugin.

--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,5 @@
 vim/bundle/airline          git https://github.com/bling/vim-airline
+vim/bundle/coffee-script    git https://github.com/kchmck/vim-coffee-script.git
 vim/bundle/dosbatch-indent  git https://github.com/vim-scripts/dosbatch-indent
 vim/bundle/golang           git https://github.com/jnwhiteh/vim-golang
 vim/bundle/markdown         git https://github.com/plasticboy/vim-markdown.git
