--- a/packages.config
+++ b/packages.config
@@ -2,11 +2,13 @@ vim/bundle/airline          git https://github.com/bling/vim-airline
 vim/bundle/coffee-script    git https://github.com/kchmck/vim-coffee-script.git
 vim/bundle/dosbatch-indent  git https://github.com/vim-scripts/dosbatch-indent
 vim/bundle/golang           git https://github.com/jnwhiteh/vim-golang
+vim/bundle/goyo             git https://github.com/junegunn/goyo.vim.git
 vim/bundle/markdown         git https://github.com/plasticboy/vim-markdown.git
 vim/bundle/nerdtree         git https://github.com/scrooloose/nerdtree
 vim/bundle/pathogen         git https://github.com/tpope/vim-pathogen
 vim/bundle/scratch          git https://github.com/vim-scripts/scratch.vim
 vim/bundle/solarized        git https://github.com/altercation/vim-colors-solarized
+vim/bundle/vimroom2         git https://github.com/amix/vim-zenroom2.git
 hgext/machina               hg  https://bitbucket.org/Painted-Fox/mercurial-machina
 hgext/rsync                 hg  https://bitbucket.org/Painted-Fox/hg-rsync
 hgext/rupdate               hg  https://bitbucket.org/Painted-Fox/rupdate
