--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,5 @@
 vim/bundle/airline          git https://github.com/bling/vim-airline
+vim/bundle/ansible-yaml     git https://github.com/chase/vim-ansible-yaml.git
 vim/bundle/coffee-script    git https://github.com/kchmck/vim-coffee-script.git
 vim/bundle/dosbatch-indent  git https://github.com/vim-scripts/dosbatch-indent
 vim/bundle/golang           git https://github.com/jnwhiteh/vim-golang
