Add firefox to the list of things to install on Windows.

--- a/choco.packages.config
+++ b/choco.packages.config
@@ -4,6 +4,7 @@
   <package id="chocolatey" />
   <package id="cmder.portable" />
   <package id="googlechrome" />
+  <package id="firefox" />
   <package id="keepass" />
   <package id="dropbox" />
   <package id="putty.install" />
