Change date and time format in tmux.  Separate i3status date and time.

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -12,6 +12,7 @@ order += "battery 0"
 order += "load"
 order += "disk /"
 order += "volume master"
+order += "tztime date"
 order += "tztime local"
 
 ethernet eth0 {
@@ -49,8 +50,12 @@ volume master {
     mixer_idx    = 0
 }
 
+tztime date {
+    format = "%a, %b %d"
+}
+
 tztime local {
-    format = "%a, %b %d %I:%M %p"
+    format = "%I:%M %p"
 }
 
 load {
