Make i3status capable of detecting when I run openvpn.

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -32,7 +32,7 @@ run_watch DHCP {
 }
 
 run_watch VPN {
-    pidfile = "/var/run/vpnc/pid"
+    pidfile = "/proc/sys/net/ipv4/conf/tun0"
 }
 
 battery 0 {
