Start the NetworkManager applet when i3 is started.

--- a/i3/config
+++ b/i3/config
@@ -137,6 +137,8 @@ bar {
 # Start the urxvt daemon and start a client when it's ready.
 exec --no-startup-id urxvtd -q -o -m
 exec --no-startup-id ~/lib/dotfiles/bin/i3init_urxvtc.fish
+# Start the NetworkManager applet
+exec --no-startup-id nm-applet
 
 # Shortcut to lock
 bindsym $mod+Control+l exec i3lock --color=000000 --ignore-empty-password
