--- a/i3/config
+++ b/i3/config
@@ -140,9 +140,9 @@ exec --no-startup-id ~/lib/dotfiles/bin/i3init_urxvtc.fish
 # Start the NetworkManager applet
 exec --no-startup-id nm-applet
 # Start the volume control applet
-exec --no-startup-id mate-volume-control-applet
+exec --no-startup-id volumeicon
 # Start the Redshift
-exec --no-startup-id gtk-redshift
+exec --no-startup-id redshift
 
 
 # Shortcut to lock
