--- a/i3/config
+++ b/i3/config
@@ -2,7 +2,7 @@
 set $mod Mod4
 
 # Use the Hack font.  Fall back on the default DejaVu font.
-font pango:Source Code Pro, DejaVu Sans Mono 11
+font pango:Sauce Code Powerline, DejaVu Sans Mono 11
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
