Switching away from relying on pam_environment.  Using bash as default shell and having i3 & tmux start fish for me.

--- a/i3/config
+++ b/i3/config
@@ -8,7 +8,7 @@ font pango:Sauce Code Powerline, DejaVu Sans Mono 11
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec urxvtc
+bindsym $mod+Return exec urxvtc -e fish
 
 # kill focused window
 bindsym $mod+Shift+q kill
