--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,6 +25,9 @@ set -g status-utf8 on
 unbind r
 bind r source-file ~/.tmux.conf
 
+# Use fish by default
+set-option -g default-command "fish"
+
 # Configuration beyond this point is inspired/borrowed from this article:
 # My Tmux Setup (http://www.unwiredcouch.com/2013/11/15/my-tmux-setup.html)
 
