--- a/i3/config
+++ b/i3/config
@@ -133,10 +133,10 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+# Start i3bar with conky
+# http://i3wm.org/docs/user-contributed/conky-i3bar.html
 bar {
-        status_command i3status
+    status_command $HOME/lib/dotfiles/bin/conky-i3bar
 }
 
 # Autostart
