--- a/i3/config
+++ b/i3/config
@@ -133,10 +133,9 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar with conky
-# http://i3wm.org/docs/user-contributed/conky-i3bar.html
+# Start i3bar
 bar {
-    status_command $HOME/lib/dotfiles/bin/conky-i3bar
+    status_command i3status
 }
 
 # Autostart
